# DragGan-NCNN

./: .gitignore  README.md
android/app/src/main/assets/: mapping.param
android/app/src/main/java/com/tencent/makeup/: MainActivity.java  StableDiffusion.java
android/app/src/main/jni/: CMakeLists.txt  makeup_jni.cpp
android/app/src/main/jni/ncnn-20230816-android-vulkan/armeabi-v7a/include/ncnn/: platform.h
android/app/src/main/jni/ncnn-20230816-android-vulkan/armeabi-v7a/lib/cmake/: OGLCompilerTargets.cmake  OSDependentTargets.cmake  SPIRVTargets.cmake  glslangTargets.cmake
android/app/src/main/jni/ncnn-20230816-android-vulkan/armeabi-v7a/lib/cmake/glslang/: glslang-targets.cmake
android/app/src/main/jni/ncnn-20230816-android-vulkan/armeabi-v7a/lib/cmake/ncnn/: ncnn.cmake
android/app/src/main/res/layout/: main.xml
android/app/src/main/res/values/: strings.xml
linux/: CMakeLists.txt  DragGan-NCNN  mainwindow.cpp  mainwindow.h  mainwindow.ui
linux/include/ncnn/: layer_shader_type_enum.h  layer_type_enum.h  platform.h
linux/lib/: libncnn.so.1
linux/lib/cmake/ncnn/: ncnn-release.cmake  ncnn.cmake
linux/lib/pkgconfig/: ncnn.pc
x86/draggan_qt_vs2019/: draggan_qt_vs2019.sln
x86/draggan_qt_vs2019/draggan_qt_vs2019/: draggan_qt_vs2019.vcxproj  draggan_qt_vs2019.vcxproj.filters  mainwindow.cpp  mainwindow.h
x86/draggan_qt_vs2019/draggan_qt_vs2019/assets/: generator.param
